--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     
 </head>
 <body>
-   
 
-    <div class="container mt-2">
-        <div class="row row-cols-4 products ">
+   
+        <div class="row row-cols-3 row-cols-lg-4 products ">
+         
             <div class="col  mt-1"  price="7000" name="product1">
                <img src="./Images/10.jpg" width="200px" height="200px">
             </div>
